@@ -170,10 +170,10 @@ elif len(sys.argv) > 1 and sys.argv[1] == 'table':
 
     table = dtk.TextTable(e, 'texttable', vimlike = True)
 
-    table.addColumn(5, weight = 1, name = 'Artist')
-    table.addColumn(5, weight = 1, name = 'Album')
-    table.addColumn(2, 2, alignment = 'right')
-    table.addColumn(5, weight = 2, name = 'Song')
+    table.addColumn(weight = 1, name = 'Artist')
+    table.addColumn(weight = 1, name = 'Album')
+    table.addColumn(fixedsize = 2, alignment = 'right')
+    table.addColumn(weight = 2, name = 'Song')
 
 
     table.setItems(items, [i for i in range(len(items))])
